--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,241 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (min-width: 100px) {
+  .Div-tech{
+    display: flow-root;
   }
+  .Left-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Right-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Div-language{
+    width: auto;
+    }
+    
+    .Div-other{
+      width: auto;
+    }
+
+    .Div-project{
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: auto;
+    }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .Div-tech{
+    display: flow-root;
+  }
+  .Left-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Right-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Div-language{
+    width: auto;
+    }
+    
+    .Div-other{
+      width: auto;
+    }
+
+    .Div-project{
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: auto;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .Div-tech{
+    display: flow-root;
+  }
+
+  .Left-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Right-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Div-language{
+    width: auto;
+    }
+    
+    .Div-other{
+      width: auto;
+    }
+
+    .Div-project{
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: auto;
+    }
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .Div-tech{
+    display: flex;
+  }
+
+  .Bottom-div-behavior{
+    display: flex;
+    margin-left: 50px;
+  }
+
+  .Left-div{
+    width: 50%;
+    text-align-last: left;
+  }
+
+  .Right-div{
+    width: 50%;
+    text-align-last: left;
+  }
+
+  .Div-language{
+    width: 50%
+    }
+    
+    .Div-other{
+      width: 50%
+    }
+
+    .Div-project{
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: 50%
+    }
+} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .Div-tech{
+    display: flex;
+  }
+
+  .Bottom-div-behavior{
+    display: flex;
+    margin-left: 10%;
+    
+  }
+
+  .Left-div{
+    width: 50%;
+    text-align-last: left;
+  }
+
+  .Right-div{
+    width: 50%;
+    text-align-last: left;
+  }
+
+  .Div-language{
+    width: 50%
+    }
+    
+    .Div-other{
+      width: 50%
+    }
+
+    .Div-project{
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: 50%
+    }
+}
+
+
+/* unvisited link */
+a:link {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+  text-decoration: none;
+}
+
+/* selected link */
+a:active {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 300%;
+  text-align-last: center;
+  margin: 20px;
+  font-family: 'Raleway';
 }
 
-.App-link {
-  color: #61dafb;
+.Header-details{
+margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Div-header{
+  font-size: large;
+  min-height: 14vh;
+  border-bottom-style: groove;
+  text-align-last: center;
+  font-family: 'Raleway';
 }
+
+.Div-compartment{
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.Subject-compartment{
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+
+.Bottom-header{
+  font-family: 'Raleway';
+  font-size: 200%;
+}
+.Bottom-header-bold{
+  font-family: 'Raleway-Bold';
+  font-size: 150%;
+}
+.Bottom-header-light{
+  font-family: 'Raleway';
+  font-size: 150%;
+}
+
+.Bottom-header-light-small{
+  font-family: 'Raleway';
+  font-size: 100%;
+}
+.Bottom-header-light-small{
+  font-family: 'Raleway';
+  font-size: 100%;
+}
+
+
+
+
