--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Raleway';
+  src: local('Raleway'), url(./fonts/raleway/Raleway-ExtraLight.otf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Raleway-Bold';
+  src: local('Raleway-Bold'), url(./fonts/raleway/Raleway-SemiBold.otf) format('truetype');
+}
