--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,8 @@
     .Div-project{
       margin-bottom: 20px;
       margin-top: 20px;
-      width: 50%
+      width: 70%;
+      text-align: left;
     }
 } 
 
@@ -156,7 +157,8 @@
     .Div-project{
       margin-bottom: 20px;
       margin-top: 20px;
-      width: 50%
+      width: 70%;
+      text-align: left;
     }
 }
 
