tweaks to ui on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
+/* Extra Small devices ( 100px and up) */
 @media only screen and (min-width: 100px) {
+
+  .Div-header{
+    font-size: 80%;
+    min-height: 14vh;
+    border-bottom-style: groove;
+    text-align-last: center;
+    font-family: 'Raleway';
+  }
+
   .Div-tech{
     display: flow-root;
+    margin-left: 15%;
   }
+
+  .Bottom-div-behavior{
+    margin-left: 8%;
+    margin-right: 2%;
+  }
+
   .Left-div{
     width: auto;
     text-align: center;
@@ -16,21 +33,87 @@
     width: auto;
     }
     
-    .Div-other{
-      width: auto;
-    }
+  .Div-other{
+    width: auto;
+  }
 
-    .Div-project{
-      margin-bottom: 20px;
-      margin-top: 20px;
-      width: auto;
-    }
+  .Div-project{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: auto;
+  }
+
+  .Bottom-header{
+    font-family: 'Raleway';
+    font-size: 150%;
+    text-align: left;
+  }
+  .Bottom-header-bold{
+    font-family: 'Raleway-Bold';
+    font-size: 100%;
+
+    text-align: left;
+  }
+  .Bottom-header-light{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 70%;
+    text-align: left;
+    width: 90%;
+  }
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 70%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-portfolio{
+    font-family: 'Raleway';
+    font-size: 70%;
+    text-align: left;
+    width: 90%;
+  }
+
+  .Header-details{
+    margin: 4%;
+    font-size: 80%;
+    display: block;
+  }
+
+  .Header-text{
+    margin: 0%;
+  }
+  .Header-separator{
+    color: #ffffff;
+  }
 }
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+
+/* Small devices ( 300px and up) */
+@media only screen and (min-width: 300px) {
+
+  .Div-header{
+    font-size: 80%;
+    min-height: 14vh;
+    border-bottom-style: groove;
+    text-align-last: center;
+    font-family: 'Raleway';
+  }
+
   .Div-tech{
     display: flow-root;
+    margin-left: 15%;
   }
+
+  .Bottom-div-behavior{
+    margin-left: 8%;
+    margin-right: 2%;
+  }
+
   .Left-div{
     width: auto;
     text-align: center;
@@ -45,21 +128,86 @@
     width: auto;
     }
     
-    .Div-other{
-      width: auto;
-    }
+  .Div-other{
+    width: auto;
+  }
 
-    .Div-project{
-      margin-bottom: 20px;
-      margin-top: 20px;
-      width: auto;
-    }
+  .Div-project{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: auto;
+  }
+
+  .Bottom-header{
+    font-family: 'Raleway';
+    font-size: 180%;
+    text-align: left;
+  }
+  .Bottom-header-bold{
+    font-family: 'Raleway-Bold';
+    font-size: 120%;
+
+    text-align: left;
+  }
+  .Bottom-header-light{
+    font-family: 'Raleway';
+    font-size: 120%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 80%;
+    text-align: left;
+    width: 90%;
+  }
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 80%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-portfolio{
+    font-family: 'Raleway';
+    font-size: 80%;
+    text-align: left;
+    width: 90%;
+  }
+
+  .Header-details{
+    margin: 4%;
+    font-size: 80%;
+    display: block;
+  }
+
+  .Header-text{
+    margin: 0%;
+  }
+  .Header-separator{
+    color: #ffffff;
+  }
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+/* Medium devices ( 500px and up) */
+@media only screen and (min-width: 500px) {
+
+  .Div-header{
+    font-size: large;
+    min-height: 14vh;
+    border-bottom-style: groove;
+    text-align-last: center;
+    font-family: 'Raleway';
+  }
+
   .Div-tech{
-    display: flow-root;
+    display: flex-root;
+    margin-left: 2%;
+  }
+
+  .Bottom-div-behavior{
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 2%;
   }
 
   .Left-div{
@@ -73,24 +221,179 @@
   }
 
   .Div-language{
-    width: auto;
+    width: 50%;
     }
     
-    .Div-other{
-      width: auto;
-    }
+  .Div-other{
+    width: 50%;
+  }
 
-    .Div-project{
-      margin-bottom: 20px;
-      margin-top: 20px;
-      width: auto;
+  .Div-project{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: auto;
+  }
+
+  .Bottom-header{
+    font-family: 'Raleway';
+    font-size: 200%;
+    text-align: left;
+  }
+  .Bottom-header-bold{
+    font-family: 'Raleway-Bold';
+    font-size: 150%;
+
+    text-align: left;
+  }
+  .Bottom-header-light{
+    font-family: 'Raleway';
+    font-size: 150%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+    width: 80%;
+  }
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-portfolio{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+    width: 80%;
+  }
+
+  .Header-details{
+    margin: 4%;
+    font-size: 90%;
+    display: block;
+  }
+
+  .Header-text{
+    margin: 0.5%;
+  }
+  .Header-separator{
+    color: #ffffff;
+  }
+}
+
+/* Medium devices ( 700px and up) */
+@media only screen and (min-width: 700px) {
+
+  .Div-header{
+    font-size: large;
+    min-height: 14vh;
+    border-bottom-style: groove;
+    text-align-last: center;
+    font-family: 'Raleway';
+  }
+
+  .Div-tech{
+    display: flex-root;
+    margin-left: 2%;
+  }
+
+  .Bottom-div-behavior{
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 2%;
+  }
+
+  .Left-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Right-div{
+    width: auto;
+    text-align: center;
+  }
+
+  .Div-language{
+    width: 50%;
     }
-} 
+    
+  .Div-other{
+    width: 50%;
+  }
+
+  .Div-project{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: auto;
+  }
+
+  .Bottom-header{
+    font-family: 'Raleway';
+    font-size: 200%;
+    text-align: left;
+  }
+  .Bottom-header-bold{
+    font-family: 'Raleway-Bold';
+    font-size: 150%;
+
+    text-align: left;
+  }
+  .Bottom-header-light{
+    font-family: 'Raleway';
+    font-size: 150%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+    width: 80%;
+  }
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-portfolio{
+    font-family: 'Raleway';
+    font-size: 100%;
+    text-align: left;
+    width: 80%;
+  }
+
+  .Header-details{
+    margin: 4%;
+    font-size: 90%;
+    display: block;
+  }
+
+  .Header-text{
+    margin: 0.5%;
+  }
+  .Header-separator{
+    color: #ffffff;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
+  .Div-header{
+    font-size: large;
+    min-height: 14vh;
+    border-bottom-style: groove;
+    text-align-last: center;
+    font-family: 'Raleway';
+  }
+
   .Div-tech{
     display: flex;
+    margin-left: 2%;
   }
 
   .Bottom-div-behavior{
@@ -112,55 +415,71 @@
     width: 50%
     }
     
-    .Div-other{
-      width: 50%
-    }
-
-    .Div-project{
-      margin-bottom: 20px;
-      margin-top: 20px;
-      width: 70%;
-      text-align: left;
-    }
-} 
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .Div-tech{
-    display: flex;
-  }
-
-  .Bottom-div-behavior{
-    display: flex;
-    margin-left: 10%;
-    
-  }
-
-  .Left-div{
-    width: 50%;
-    text-align-last: left;
-  }
-
-  .Right-div{
-    width: 50%;
-    text-align-last: left;
-  }
-
-  .Div-language{
+  .Div-other{
     width: 50%
-    }
-    
-    .Div-other{
-      width: 50%
-    }
+  }
 
-    .Div-project{
-      margin-bottom: 20px;
-      margin-top: 20px;
-      width: 70%;
-      text-align: left;
-    }
-}
+  .Div-project{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 85%;
+    text-align: left;
+  }
+
+  .Bottom-header{
+    font-family: 'Raleway';
+    font-size: 200%;
+    text-align: left;
+  }
+  .Bottom-header-bold{
+    font-family: 'Raleway-Bold';
+    font-size: 150%;
+    width: 70%;
+    text-align: left;
+  }
+  .Bottom-header-light{
+    font-family: 'Raleway';
+    font-size: 150%;
+    width: 70%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    width: 70%;
+    text-align: left;
+  }
+  .Bottom-header-light-small{
+    font-family: 'Raleway';
+    font-size: 100%;
+    width: 70%;
+    text-align: left;
+  }
+  
+  .Bottom-header-light-portfolio{
+    font-family: 'Raleway';
+    font-size: 100%;
+    width: 100%;
+    text-align: left;
+  }
+
+  .Header-details{
+    margin: 2%;
+    font-size: 100%;
+    display: inline-flex;
+  }
+
+  .Header-text{
+    margin: 0.5%;
+  }
+
+  .Header-separator{
+    margin: 0.5%;
+    color: #000000;
+  }
+  
+} 
 
 
 /* unvisited link */
@@ -194,17 +513,6 @@ a:active {
   font-family: 'Raleway';
 }
 
-.Header-details{
-margin: 10px;
-}
-
-.Div-header{
-  font-size: large;
-  min-height: 14vh;
-  border-bottom-style: groove;
-  text-align-last: center;
-  font-family: 'Raleway';
-}
 
 .Div-compartment{
   margin-bottom: 20px;
@@ -216,27 +524,6 @@ margin: 10px;
   margin-top: 40px;
 }
 
-.Bottom-header{
-  font-family: 'Raleway';
-  font-size: 200%;
-}
-.Bottom-header-bold{
-  font-family: 'Raleway-Bold';
-  font-size: 150%;
-}
-.Bottom-header-light{
-  font-family: 'Raleway';
-  font-size: 150%;
-}
-
-.Bottom-header-light-small{
-  font-family: 'Raleway';
-  font-size: 100%;
-}
-.Bottom-header-light-small{
-  font-family: 'Raleway';
-  font-size: 100%;
-}
 
 
 
